--- a/estilo.css
+++ b/estilo.css
@@ -8,6 +8,7 @@ body{
   background-size: cover;
   width: 100%;
   height: 450px;
+  border-top: 1px solid transparent;
 }
 .topo-content{
   text-align: center;
@@ -17,28 +18,38 @@ body{
 .topo-content h1{
   text-transform: uppercase;
   text-shadow: 3px 3px 3px #333;
-  font-size: 46px;
+  font-size: 40px;
+  margin-top: 100px;
 }
 .topo-content p{
-  background-color: #666;
   color: white;
-  margin: 10px;
-  border-bottom: solid 2px white;
+  padding: 5px;
+  border-bottom: solid 1px white;
+  background-color: rgba(0,0,0,0.3);
 }
-li{
+.topo ul{
+  text-align: right;
+  margin: 20px 50px 0 0;
+}
+.topo li{
   list-style: none;
-  background-color: #666;
-  border: solid 2px white;
-  width: 100px;
-  margin:0 auto;
+  border: solid 1px white;
+  display: inline-block;
+  text-align: center;
+  margin-left: 4px;
 }
-a{
+.topo a{
+  background-color: rgba(0,0,0,0.3);
+  display: block;
   color: white;
+  padding: 5px;
+  font-size: 12px;
   text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
-h2{
-  background-color: #BBB;
-  border-bottom: solid 2px #444;
+.topo a:hover{
+  background-color: rgba(0,0,0,0.5);
 }
 main{
   width: 80%;
@@ -64,10 +75,14 @@ img{
   color: white;
   font-size: 20px;
 }
+h2{
+  background-color: #BBB;
+  border-bottom: solid 2px #444;
+}
 footer{
   background-color: #444;
   color: white;
   height: 100px;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
 }
