--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #DCDCDC;
+  background-color: #BBB;
   font-family: Arial,sans-serif;
   margin: 0;
 }
@@ -23,9 +23,10 @@ body{
 }
 .topo-content p{
   color: white;
-  padding: 5px;
+  padding: 10px;
   border-bottom: solid 1px white;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0.5);
+  display: inline-block;
 }
 .topo ul{
   text-align: right;
@@ -63,20 +64,35 @@ section{
   padding-right: 10px;
   padding-top: 8px;
   padding-bottom: 8px;
-
 }
-img{
-  width: 200px;
-  height: 100px;
+.content-section{
+  overflow: auto;
 }
-.imagens{
-  background-color: #666;
-  font-variant: small-caps;
+.card{
+  width: 32%;
+  float: left;
+}
+.card-1, .card-2{
+  margin-right: 2%;
+}
+.card p{
+  background: #666;
   color: white;
-  font-size: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding: 2px;
+  box-sizing: border-box;
+  font-variant: small-caps;
+  font-size: 18px;
+  letter-spacing: 1px;
+  margin-top: 0;
+}
+.card img{
+  width: 100%;
+  display: block;
 }
 h2{
-  background-color: #BBB;
+  background-color: #DCDCDC;
   border-bottom: solid 2px #444;
 }
 footer{
