--- a/estilo_2.css
+++ b/estilo_2.css
@@ -81,7 +81,7 @@ section{
   clear: both;
 }
 .s2{
-  background-color: rgb(25,25,112);
+  background-color: rgb(15,61,81);
   color: white;
   text-align: left;
   padding: 30px;
@@ -92,8 +92,9 @@ section{
   overflow: auto;
 }
 .detalhe{
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
+  float: right;
 }
 .s2 h1{
   padding-top: 0;
