--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@ body{
   margin: 0;
 }
 .topo{
-  background-image: url(../imagens/imagens-/bg-4.jpg);
+  background-image: url(../imagens/imagens--/imagens-/bg-4.jpg);
   background-size: cover;
   width: 100%;
   height: 450px;
