--- a/estilo_fashion.css
+++ b/estilo_fashion.css
@@ -30,10 +30,93 @@ body{
   list-style: none;
   display: inline-block;
   margin: 0 15px 0 0;
-  padding: 10px;
+  padding: 13px;
 }
 .header-nav a{
-  color: #8099ad;
+  color: #425564;
   text-decoration: none;
   text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 5px;
+  transition: color 0.3s linear;
+}
+.header-nav a:hover{
+  color: white;
+}
+.portfolio{
+  padding: 50px 100x;
+  text-align: center;
+}
+
+.portifolio h1{
+  font-size: 36px;
+  color: #252525;
+}
+.portifolio p{
+  font-size: 16px;
+  line-height: 2;
+  color: #555;
+}
+.gallery{
+  color: #555;
+  padding: 0 100px 50px 100px;
+  overflow: auto;
+}
+.gallery-card{
+  width: 32%;
+  float: left;
+  text-align: center;
+}
+.gallery-title{
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-size: 16px;
+  font-weight: bold;
+}
+.about{
+  clear: both;
+  background-color: #003d52;
+  padding: 100px;
+  color: white;
+  background-image: url(../imagens/imagens--/bg_detalhe.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+.about h2{
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: normal;
+}
+.about p{
+  line-height: 1.5;
+  width: 70%;
+}
+#contact{
+  margin: 50px 0;
+}
+#contact address{
+  color: #143f52;
+  text-transform: uppercase;
+  font-size: 26px;
+  font-style: normal;
+  text-align: center;
+  font-weight: bold;
+}
+.maps{
+  text-align: center;
+  width: 100%
+  height: 450px;
+  margin-top: 15px;
+}
+iframe{
+  width: 100%;
+}
+.rodape{
+  background-color: #0b171f;
+  padding: 25px;
+  font-size: 12px;
+  color: #6f8597;
+  letter-spacing: 5px;
+  text-align: center;
+  margin-top: 15px;
 }
