--- a/css/estilo_2.css
+++ b/css/estilo_2.css
@@ -1,5 +1,5 @@
 .topo{
-  background-image: url(../imagens/imagens--/topo.jpg);
+  background-image: url(../imagens/imagens-/topo.jpg);
   background-size: cover;
   background-position: center;
   width: 90%;
