--- a/css/estilo_treinando.css
+++ b/css/estilo_treinando.css
@@ -26,7 +26,7 @@ body{
   text-shadow: 3px 3px 2px black;
 }
 .topo{
-  background-image: url(../imagens/slide1.jpg);
+  background-image: url(../imagens/imagens-/slide1.jpg);
   background-size: cover;
   width: 90%;
   height: 500px;
